dev/k8s/gateway/keycloak-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: cloudforge-control-plane
spec:
  type: ExternalName
  externalName: host.k3d.internal
  ports:
    - name: http
      port: 8084
      targetPort: 8084
