dev/k8s/gateway/httproute-keycloak.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak
  namespace: cloudforge-control-plane
spec:
  parentRefs:
    - name: cloudforge-gateway
      namespace: envoy-gateway-system
  hostnames:
    - auth.cloudforge.local
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: keycloak
          port: 8084
